--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="primaryGreen">#B2C541</color>
+    <color name="primaryDark">#288909</color>
+    <color name="primaryVariant">#6FB22F</color>
+
+    <color name="secondaryBlue">#003274</color>
+    <color name="secondaryVariant">#025EA1</color>
+
+    <color name="grey">#D3D3D3</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
